# ST2024Theremin

./: .gitignore  README.md
examples/BGM/: BGM.c  BGM.h  BinaryInputManager.c  BinaryInputManager.h  CMakeLists.txt  WaveManager.c  WaveManager.h  buildProject  hw_config.c
examples/BGM/schematic/: BGM.kicad_prl  BGM.kicad_pro  BGM.kicad_sch
examples/FSharp32/: F#32Font10x15.lcd  F#32Font5x7.lcd  buildProject  sampleExtractor.py  testSample.py
examples/FSharp32/schematic/: FSharp32.kicad_pcb  FSharp32.kicad_prl  FSharp32.kicad_pro  FSharp32.kicad_sch
examples/FSharp32/src/: I2C.h  Inputs.c  Inputs.h  Instruments.c  Instruments.h  Menu.c  Menu.h  SSD1306.c  SSD1306.h  UART.h  defaultProfiles.c  fSharp32.c  fSharp32.h
md/: PICO_config.md
model/: FrontPanel.FCStd
schematic/: Theremin.kicad_pcb  Theremin.kicad_prl  Theremin.kicad_pro  Theremin.kicad_sch
src/: sampleExtractor.py
